Final things fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dxstarter",
+  "name": "freedo",
   "version": "1.1.0",
   "description": "Quick settings for developing themes.",
   "main": "Gulpfile.js",
